# guarani-processor

./: .gitmodules  CMakeLists.txt  FindGit.cmake
include/: cmdline_t.h
src/: cmdline_t.cpp  main.cpp
